--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <ul class="skip-links">
     <li><a href="#main">Jump to main content</a></li>
-    <li><a href="#navi">Jump to navigation</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
   </ul>
 
   <header role="banner">
